Resolve firefox table alignment issue

--- a/openquakeplatform/openquakeplatform/static/css/risk_input_model.css
+++ b/openquakeplatform/openquakeplatform/static/css/risk_input_model.css
@@ -23,7 +23,7 @@ label {
 
 .ffsTable {
 	width: 50%;
-	margin-left: 30px;
+	margin-left: 20px;
 }
 
 .vfsTable {
